# Othello

./: Readme.md  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
docs/: 235.js  index.html  index.js
src/: add.test.ts  add.ts  ai.ts  drawer.test.ts  drawer.ts  game.ts  index.html  index.ts  main.ts  othello.test.ts  othello.ts  wasm_agent.ts
wasm-agent/: .gitignore  Cargo.toml  Makefile
wasm-agent/benches/: bench_agent.rs  bench_minmax.rs  bench_reverse.rs
wasm-agent/scripts/: parallel_play.py  pyproject.toml
wasm-agent/scripts/scripts/: output_base64.py  parallel_play.py
wasm-agent/src/: agent.rs  alphabeta_agent.rs  endgame.rs  evaluation.rs  lib.rs  minmax_agent.rs  ml_agent.rs  negascout_agent.rs  othello.rs  profile_test.rs  reverse.rs  search_count.rs
