[package]
name = "wasm-agent"
version = "0.1.0"
authors = ["Kaku Sawada <kaku.sawada.ak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
rand = "^0.8"

[lib]
crate-type = ["rlib", "cdylib"]