[package]
name = "wasm-agent"
version = "0.1.0"
authors = ["Kaku Sawada <kaku.sawada.ak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
rand = "^0.8"
rand_xoshiro = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
once_cell = "^1.8"
dyn-clone = "^1.0"
pprof = { version = "0.4", features = ["flamegraph", "criterion", "protobuf"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_minmax"
harness = false

[[bench]]
name = "bench_reverse"
harness = false

[lib]
crate-type = ["rlib", "cdylib"]